--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ header {
 }
 
 header p {
-  color: #d9e0e2;
+  color: #f2f9fb;
   font-size: 40px;
   margin-bottom: 80px;
 }
@@ -206,18 +206,18 @@ header p {
 
 .intro-text h2 {
   font-size: 100px;
-  color: #e8eff1;
+  color: #f2f9fb;
 }
 
 .intro-text H1 {
   font-size: 70px;
   text-transform: uppercase;
-  color: #e8eff1;
+  color: #f2f9fb;
   letter-spacing: 2px;
 }
 
 .color {
-  color: #f3ca27;
+  color: #f2f9fb;
 }
 
 .btn-default {
@@ -236,16 +236,13 @@ header p {
 
 /* Background Section */
 #bg-container {
-  background: url(../img/header-bg.jpg);
+  background: url(../img/background.jpg);
   background-size: cover;
   background-attachment: fixed;
-  /*height: 150px;*/
 }
 /* Background Section */
 .bg-section {
   background: rgba(46, 51, 56, 0.7);
-  /*background-size: cover;*/
-  /*background-attachment: fixed;*/
   height: 150px;
 }
 
@@ -253,12 +250,6 @@ header p {
 .services-section {
   padding: 80px 0 100px 0;
   /*!* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d6dbbf+0,feffe8+25,feffe8+75,d6dbbf+100 *!*/
-  /*background: rgb(214,219,191); !* Old browsers *!*/
-  /*background: -moz-linear-gradient(top,  rgba(214,219,191,1) 0%, rgba(254,255,232,1) 25%, rgba(254,255,232,1) 75%, rgba(214,219,191,1) 100%); !* FF3.6-15 *!*/
-  /*background: -webkit-linear-gradient(top,  rgba(214,219,191,1) 0%,rgba(254,255,232,1) 25%,rgba(254,255,232,1) 75%,rgba(214,219,191,1) 100%); !* Chrome10-25,Safari5.1-6 *!*/
-  /*background: linear-gradient(to bottom,  rgba(214,219,191,1) 0%,rgba(254,255,232,1) 25%,rgba(254,255,232,1) 75%,rgba(214,219,191,1) 100%); !* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ *!*/
-  /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6dbbf', endColorstr='#d6dbbf',GradientType=0 ); !* IE6-9 *!*/
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#c9c9c9+0,f2f2f2+20,f2f2f2+100,c9c9c9+100 */
   background: rgb(201,201,201); /* Old browsers */
   background: -moz-linear-gradient(top,  rgba(201,201,201,1) 0%, rgba(242,242,242,1) 20%, rgba(242,242,242,1) 100%, rgba(201,201,201,1) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(242,242,242,1) 20%,rgba(242,242,242,1) 100%,rgba(201,201,201,1) 100%); /* Chrome10-25,Safari5.1-6 */
