--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ header p {
 
 /* Background Section */
 #bg-container {
-  background: url(../img/background.jpg);
+  background: url(../img/background-2.jpg);
   background-size: cover;
   background-attachment: fixed;
 }
